Dockerize the app